<resources>
    <string name="app_name">Hospital_Management_System</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_for_doctors">Search for Doctors</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="documentation">Documentation</string>
    <string name="menu">Menu</string>
    <string name="doctors">Doctors</string>
    <string name="icon">Icon</string>
    <string name="app_bar_title">App Bar Title</string>
    app_bar_title
    <string name="name_profile">Tianna Rosse</string>
    <string name="fill_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
        magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>

    <string name="doc_text1">
        1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
        magna aliqua.
    </string>
    <string name="doc_text2">
        2. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
        magna aliqua.
    </string>
    <string name="doc_text3">
        3. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
        magna aliqua.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_reset_password">reset passsword</string>
    <string name="title_ResetPasswordActivity">ResetActivity</string>logout
    <string name="logout">Log out</string>


</resources>