<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_height="match_parent"
             tools:context=".DocumentationFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:text="@string/doc_text1"
                android:textSize="15sp"
                android:layout_margin="15dp"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView1"/>
        <TextView
                android:text="@string/doc_text2"
                android:textSize="15sp"
                android:layout_margin="15dp"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/doctor_profile_hospital"/>
        <TextView
                android:text="@string/doc_text3"
                android:textSize="15sp"
                android:layout_margin="15dp"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView3"/>
        <TextView
                android:text="@string/doc_text3"
                android:textSize="15sp"
                android:layout_margin="15dp"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/patient_profile_gender"/>
        <ImageView
                android:layout_margin="10dp"
                app:srcCompat="@drawable/documentation"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:id="@+id/phone"
                android:layout_gravity="center"
        />


    </LinearLayout>
</FrameLayout>