<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

    <Button
            android:text="SIGN-UP Doctor"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/sign_up_button_doctor"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:layout_marginTop="160dp"
            android:textSize="15sp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"/>
    <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/layout_bg3"


    />

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"

            android:background="@drawable/layout_bg3"
    />

    <Button
            android:id="@+id/login"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.636"
            android:background="@drawable/layout_bg4"
            android:textColor="@color/colorTextOnPrimaryBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>
    <ProgressBar
            android:id="@+id/progressBar1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <TextView
            android:text="Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="152dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
    />
    <TextView
            android:text="You don't have an account?"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:layout_marginStart="92dp"/>

    <Button
            android:text="SIGN-UP Patient"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/sign_up_button1"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:layout_marginTop="140dp"
            android:textSize="15sp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"/>
    <Button
            android:text="Reset"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/btn_reset_password1"
            android:backgroundTint="#FFFFFF"

            android:textSize="15sp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:layout_marginTop="140dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>